[gd_scene load_steps=10 format=3 uid="uid://bnqhj35d2qkpa"]

[ext_resource type="Script" path="res://Game.gd" id="1_r4gip"]
[ext_resource type="PackedScene" uid="uid://bth8beo6h5ybm" path="res://Mobs/player.tscn" id="2_g2lhd"]
[ext_resource type="PackedScene" uid="uid://b6hlh6i6qfo30" path="res://start_area.tscn" id="4_dabe0"]
[ext_resource type="Script" path="res://Screen Area.gd" id="4_dqbc6"]
[ext_resource type="PackedScene" uid="uid://d0t3u3e50ljbk" path="res://start_surface.tscn" id="6_loc4c"]
[ext_resource type="PackedScene" uid="uid://dyxnvg3ae2i8l" path="res://surface_park.tscn" id="7_4pkfy"]
[ext_resource type="PackedScene" uid="uid://b6pgwmljiikrp" path="res://start_tunnel.tscn" id="7_gd3fx"]
[ext_resource type="PackedScene" uid="uid://dq083vadn4wg6" path="res://city_right.tscn" id="8_l7vx2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b62dn"]
size = Vector2(400, 300)

[node name="Game" type="Node2D"]
script = ExtResource("1_r4gip")

[node name="ScreenBox" type="Polygon2D" parent="."]
z_index = 4096
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
polygons = [PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 5, 6, 7)]

[node name="Background" type="Polygon2D" parent="."]
z_index = -1
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0)

[node name="Screen Area" type="Area2D" parent="."]
position = Vector2(-189, -167)
collision_layer = 0
collision_mask = 32772
monitorable = false
script = ExtResource("4_dqbc6")

[node name="Screen Shape" type="CollisionShape2D" parent="Screen Area"]
position = Vector2(200, 150)
shape = SubResource("RectangleShape2D_b62dn")

[node name="Player" parent="." instance=ExtResource("2_g2lhd")]
position = Vector2(-1237, -2221)

[node name="Start Tunnel" parent="." instance=ExtResource("7_gd3fx")]
position = Vector2(-192, -192)

[node name="Start Area" parent="." instance=ExtResource("4_dabe0")]

[node name="Start Surface" parent="." instance=ExtResource("6_loc4c")]
position = Vector2(-128, -1072)

[node name="Surface Park" parent="." instance=ExtResource("7_4pkfy")]
position = Vector2(-944, -2128)

[node name="City Right" parent="." instance=ExtResource("8_l7vx2")]
position = Vector2(-3264, -2128)

[connection signal="area_entered" from="Screen Area" to="Screen Area" method="_on_area_entered"]
[connection signal="area_exited" from="Screen Area" to="Screen Area" method="_on_area_exited"]
[connection signal="body_entered" from="Screen Area" to="Screen Area" method="_on_body_entered"]
[connection signal="body_exited" from="Screen Area" to="Screen Area" method="_on_body_exited"]
